--- a/CSS-Avancado/css/banner.css
+++ b/CSS-Avancado/css/banner.css
@@ -40,7 +40,7 @@
     width: 100%;
 }
 
-@media screen and (max-widith: 1280px) {
+@media screen and (max-width: 1280px) {
     .banner {
         grid-template-columns: 1fr;
         text-align: center;
