--- a/Seletores-e-Variaveis/estilos.css
+++ b/Seletores-e-Variaveis/estilos.css
@@ -18,6 +18,9 @@
     --cor-neutra-medio: #b9b9b9;
     --cor-neutra-light: #ffffff;
 
+    --cor-primaria-box-shadow: rgba(193, 55, 36, 0.4);
+    --cor-secundaria-box-shadow: rgba(162, 183, 43, 0.4);
+
     --font-sigmar: "Sigmar", sans-serif;
     --font-poppins: "Poppins", sans-serif;
 
@@ -81,14 +84,91 @@ h5 {
 }
 
 body {
-    font-family: var(--font-poppins);
-    color: var(--cor-neutra-dark);
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    background-color: var(--cor-neutra-light);
+  font-family: "Poppins", sans-serif;
+  color: #444444;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  background-color: #ffffff;
+}
 
-    .container {
-        width: 1200px;
-    }
+.container {
+  width: 1200px;
+  @media (max-width: 768px) {
+    width: 648px;
+  }
+}
+
+.cabecalho {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding-bottom: 2rem;
+}
+
+.alinhamento-cabecalho {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: var(--padding-l);
+
+}
+
+.label-busca {
+  display: flex;
+  flex-grow: 0.5;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid var(--cor-neutra-dark);
+  padding: var(--padding-s) var(--padding-m);
+  border-radius: 2rem;
+}
+
+.label-busca input {
+  border: none;
+  outline: none;
+}
+
+.botao-login {
+  background-color: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.navegacao {
+  align-content: center;
+}  
+
+.menu-lista {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1rem 0;
+  list-style: none;
+}
+
+.menu-link {
+  text-decoration: none;
+  color: #444444;
+  position: relative;
+  padding-bottom: 0.25rem;  
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: #444444;
+    transition: width 0.3s ease;
+  }
+}
+
+.menu-link:hover::after,
+.menu-link:focus::after {
+  width: 100%;
 }
